src/test/ui/mismatched_types/issue-35030.stderr
error[E0308]: mismatched types
  --> $DIR/issue-35030.rs:19:14
   |
LL |         Some(true) //~ ERROR mismatched types
   |              ^^^^ expected type parameter, found bool
   |
   = note: expected type `bool` (type parameter)
              found type `bool` (bool)

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0308"
